fixed tours section gap

--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,7 @@ body {
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0;
-  margin-top: -10rem; }
+  margin-top: -15rem; }
 
 .section-stories {
   padding: 15rem 0;
