--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -25,7 +25,7 @@
 .section-tours{
   background-color: $color-gray-light-1;
   padding: 25rem 0 ;
-  margin-top: -10rem;
+  margin-top: -15rem;
 }
 
 .section-stories{
